<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_dashboard"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/dashboard_toolbar_title"/>
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/settings_toolbar_title"/>
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_info_24dp"
            android:title="@string/about_toolbar_title" />
    </group>
</menu>