<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/background_light"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:id="@+id/main_title"
            style="@style/MainTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finance_toolbar_title"
            android:visibility="gone" />

    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/fl_finance_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>