<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/fragment_settings"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".ui.settings.SettingsFragment">
...
